--- a/public/upload.html
+++ b/public/upload.html
@@ -11,6 +11,20 @@
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="main.css" rel="stylesheet">
+
+    <style>
+     
+      .navbar-nav .nav-link {
+        transition: transform 0.3s;
+        /* 변화를 부드럽게 적용 */
+      }
+  
+      .navbar-nav .nav-link:hover {
+        transform: scale(1.3);
+        /* 마우스를 올렸을 때 1.3배로 확대 */
+      }
+    </style>
+      
   </head>
   <body>
 
